pxc/tests/test_143_lookup/test1.px
public namespace test1;
public import core::common -;
public import x1;
public import x2;

function void do_test() {
  x1::test1{0}();
  x2::test1{0}(); // error
}

do_test();

